force-app/main/default/objects/Avaliacao__c/fields/Hidratacao_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Hidratacao_Fisioterapia__c</fullName>
    <label>Hidratação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hidratado</fullName>
            </value>
            <value>
                <fullName>Desidratado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>