force-app/main/default/objects/Avaliacao__c/fields/HigienePessoal_TO__c.field-meta.xml
<CustomField>
    <fullName>HigienePessoal_TO__c</fullName>
    <label>F - Higiene Pessoal</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>