force-app/main/default/objects/Avaliacao__c/fields/Higieniza_o_oral_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Higieniza_o_oral_Fonoaudiologia__c</fullName>
    <label>Higienização oral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boa</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Ruim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>