force-app/main/default/objects/Avaliacao__c/fields/Hipotese_Diag_Medica__c.field-meta.xml
<CustomField>
    <fullName>Hipotese_Diag_Medica__c</fullName>
    <label>Hipótese Diagnóstica</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>