force-app/main/default/objects/Avaliacao__c/fields/Hist_ria_biopsicossocial_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Hist_ria_biopsicossocial_Psicologia__c</fullName>
    <description>Estrutura familiar, atividades de lazer, papel que exerce na família.</description>
    <label>História biopsicossocial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>