force-app/main/default/objects/Avaliacao__c/fields/Historia_da_Molestia_Medica__c.field-meta.xml
<CustomField>
    <fullName>Historia_da_Molestia_Medica__c</fullName>
    <label>História da Moléstia Atual</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>