force-app/main/default/objects/Avaliacao__c/fields/InteracaoSocial_TO__c.field-meta.xml
<CustomField>
    <fullName>InteracaoSocial_TO__c</fullName>
    <label>P - Interação Social</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>