force-app/main/default/objects/Avaliacao__c/fields/Isocoricas_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Isocoricas_Enfermagem__c</fullName>
    <label>Isocóricas</label>
    <length>18</length>
    <type>Text</type>
</CustomField>