force-app/main/default/objects/Avaliacao__c/fields/L_bios_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>L_bios_Fonoaudiologia__c</fullName>
    <label>Lábios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ocluídos</fullName>
            </value>
            <value>
                <fullName>Entreabertos</fullName>
            </value>
            <value>
                <fullName>Normotônus</fullName>
            </value>
            <value>
                <fullName>Hipertônus</fullName>
            </value>
            <value>
                <fullName>Hipotônus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>