force-app/main/default/objects/Avaliacao__c/fields/L_ngua_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>L_ngua_Fonoaudiologia__c</fullName>
    <label>Língua</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normotônus</fullName>
            </value>
            <value>
                <fullName>Hipertônus</fullName>
            </value>
            <value>
                <fullName>Hipotônus</fullName>
            </value>
            <value>
                <fullName>Estala</fullName>
            </value>
            <value>
                <fullName>Protrui</fullName>
            </value>
            <value>
                <fullName>Retrai</fullName>
            </value>
            <value>
                <fullName>Lateraliza</fullName>
            </value>
            <value>
                <fullName>Vibra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>