force-app/main/default/objects/Avaliacao__c/fields/Laringe_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Laringe_Fonoaudiologia__c</fullName>
    <label>Laringe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excursão adequada</fullName>
            </value>
            <value>
                <fullName>Excursão reduzida</fullName>
            </value>
            <value>
                <fullName>Excursão ausente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>