force-app/main/default/objects/Avaliacao__c/fields/Leito_Cadeira_TO__c.field-meta.xml
<CustomField>
    <fullName>Leito_Cadeira_TO__c</fullName>
    <label>I - Leito / Cadeira / Cadeira de rodas</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>