force-app/main/default/objects/Avaliacao__c/fields/Leucocitos_Medica__c.field-meta.xml
<CustomField>
    <fullName>Leucocitos_Medica__c</fullName>
    <label>Leucócitos</label>
    <length>9</length>
    <type>Text</type>
</CustomField>