force-app/main/default/objects/Avaliacao__c/fields/Local_da_aspiracao_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Local_da_aspiracao_Fisioterapia__c</fullName>
    <label>Local da aspiração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nasal</fullName>
            </value>
            <value>
                <fullName>TQT</fullName>
            </value>
            <value>
                <fullName>Nasotraqueal</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>