force-app/main/default/objects/Avaliacao__c/fields/Longo_Prazo__c.field-meta.xml
<CustomField>
    <fullName>Longo_Prazo__c</fullName>
    <label>Longo Prazo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>