force-app/main/default/objects/Avaliacao__c/fields/Loudnes_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Loudnes_Fonoaudiologia__c</fullName>
    <label>Loudnes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adequado</fullName>
            </value>
            <value>
                <fullName>Forte</fullName>
            </value>
            <value>
                <fullName>Fraco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>