force-app/main/default/objects/Avaliacao__c/fields/Mand_bula_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Mand_bula_Fonoaudiologia__c</fullName>
    <label>Mandíbula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fratura de face</fullName>
            </value>
            <value>
                <fullName>Trismo</fullName>
            </value>
            <value>
                <fullName>Desvio</fullName>
            </value>
            <value>
                <fullName>Bruxismo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>