force-app/main/default/objects/Avaliacao__c/fields/Manifesta_observadas_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Manifesta_observadas_Psicologia__c</fullName>
    <label>Manifestações psíquicas observadas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem manifestações negativas</fullName>
            </value>
            <value>
                <fullName>Agressividade</fullName>
            </value>
            <value>
                <fullName>Ambiguidade</fullName>
            </value>
            <value>
                <fullName>Angústia</fullName>
            </value>
            <value>
                <fullName>Ansiedade</fullName>
            </value>
            <value>
                <fullName>Comportamento fóbico</fullName>
            </value>
            <value>
                <fullName>Conflito de identidade</fullName>
            </value>
            <value>
                <fullName>Conformismo</fullName>
            </value>
            <value>
                <fullName>Culpa</fullName>
            </value>
            <value>
                <fullName>Dependência</fullName>
            </value>
            <value>
                <fullName>Desamparo</fullName>
            </value>
            <value>
                <fullName>Desconfiança</fullName>
            </value>
            <value>
                <fullName>Desesperança</fullName>
            </value>
            <value>
                <fullName>Despessoalização</fullName>
            </value>
            <value>
                <fullName>Diminuição da capacidade de julgamento</fullName>
            </value>
            <value>
                <fullName>Dor / Incapacidade</fullName>
            </value>
            <value>
                <fullName>Estresse</fullName>
            </value>
            <value>
                <fullName>Exaustão emocional</fullName>
            </value>
            <value>
                <fullName>Fantasias</fullName>
            </value>
            <value>
                <fullName>Fracasso</fullName>
            </value>
            <value>
                <fullName>Frustração</fullName>
            </value>
            <value>
                <fullName>Hospitalismo Negativo</fullName>
            </value>
            <value>
                <fullName>Hospitalismo Positivo</fullName>
            </value>
            <value>
                <fullName>Hostilidade</fullName>
            </value>
            <value>
                <fullName>Ideação Suicida</fullName>
            </value>
            <value>
                <fullName>Impotência</fullName>
            </value>
            <value>
                <fullName>Impulsividade</fullName>
            </value>
            <value>
                <fullName>Insegurança</fullName>
            </value>
            <value>
                <fullName>Introjeção</fullName>
            </value>
            <value>
                <fullName>Irritabilidade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>