force-app/main/default/objects/Avaliacao__c/fields/Marcapasso_cardiaco_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Marcapasso_cardiaco_Enfermagem__c</fullName>
    <label>Marcapasso cardíaco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanente</fullName>
            </value>
            <value>
                <fullName>Temporário</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>