force-app/main/default/objects/Avaliacao__c/fields/Marcha_Cadeira_de_rodas_TO__c.field-meta.xml
<CustomField>
    <fullName>Marcha_Cadeira_de_rodas_TO__c</fullName>
    <label>L - Marcha / Cadeira de rodas</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>