force-app/main/default/objects/Avaliacao__c/fields/Marcha_Descricao_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Marcha_Descricao_Fisioterapia__c</fullName>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>