force-app/main/default/objects/Avaliacao__c/fields/Marcha_fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Marcha_fisioterapia__c</fullName>
    <label>Marcha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem alterações</fullName>
            </value>
            <value>
                <fullName>Alterada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>