force-app/main/default/objects/Avaliacao__c/fields/Medida_de_Independencia_TO__c.field-meta.xml
<CustomField>
    <fullName>Medida_de_Independencia_TO__c</fullName>
    <label>Medida de Independência Funcional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Assistência total  (sujeito  +/- 0%)</fullName>
            </value>
            <value>
                <fullName>2 - Assistência máxima (sujeito +/- 25%)</fullName>
            </value>
            <value>
                <fullName>3 - Assistência moderada (indivíduo +/- 50%)</fullName>
            </value>
            <value>
                <fullName>4 - Assistência mínima (indivíduo +/- 75%)</fullName>
            </value>
            <value>
                <fullName>5 - Supervisão</fullName>
            </value>
            <value>
                <fullName>6 -Independência modificada ( aparelho)</fullName>
            </value>
            <value>
                <fullName>7 - Independência completa (tempo / segurança)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>