force-app/main/default/objects/Avaliacao__c/fields/Medio_Prazo__c.field-meta.xml
<CustomField>
    <fullName>Medio_Prazo__c</fullName>
    <label>Médio Prazo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>