force-app/main/default/objects/Avaliacao__c/fields/Membros_e_pele_medica__c.field-meta.xml
<CustomField>
    <fullName>Membros_e_pele_medica__c</fullName>
    <label>Membros e pele</label>
    <type>TextArea</type>
</CustomField>