force-app/main/default/objects/Avaliacao__c/fields/Memoria_TO__c.field-meta.xml
<CustomField>
    <fullName>Memoria_TO__c</fullName>
    <label>R - Memória</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>