force-app/main/default/objects/Avaliacao__c/fields/Midriase_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Midriase_Enfermagem__c</fullName>
    <label>Midríase</label>
    <length>18</length>
    <type>Text</type>
</CustomField>