force-app/main/default/objects/Avaliacao__c/fields/Miose_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Miose_Enfermagem__c</fullName>
    <label>Miose</label>
    <length>18</length>
    <type>Text</type>
</CustomField>