force-app/main/default/objects/Avaliacao__c/fields/Mobilidade_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Mobilidade_Fisioterapia__c</fullName>
    <label>Mobilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deambula sem ajuda</fullName>
            </value>
            <value>
                <fullName>Deambula com ajuda</fullName>
            </value>
            <value>
                <fullName>Cadeirante</fullName>
            </value>
            <value>
                <fullName>Acamado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>