force-app/main/default/objects/Avaliacao__c/fields/Modo_Enfermagem__c.field-meta.xml
<CustomField>
    <fullName>Modo_Enfermagem__c</fullName>
    <label>Modo</label>
    <length>9</length>
    <type>Text</type>
</CustomField>