force-app/main/default/objects/Avaliacao__c/fields/Modo_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Modo_Fisioterapia__c</fullName>
    <label>Modo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>