force-app/main/default/objects/Avaliacao__c/fields/Modo_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Modo_Fonoaudiologia__c</fullName>
    <label>Modo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nasal</fullName>
            </value>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>Oronasal</fullName>
            </value>
            <value>
                <fullName>Traqueostomia metálica</fullName>
            </value>
            <value>
                <fullName>Traqueostomia plástica, cuff desinsuflado</fullName>
            </value>
            <value>
                <fullName>Traqueostomia plástica, cuff insuflado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>