force-app/main/default/objects/Avaliacao__c/fields/Monoparesia_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Monoparesia_Fisioterapia__c</fullName>
    <label>Monoparesia (caso se aplique)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>