force-app/main/default/objects/Avaliacao__c/fields/Monoplegia_fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Monoplegia_fisioterapia__c</fullName>
    <label>Monoplegia (caso se aplique)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>