force-app/main/default/objects/Avaliacao__c/fields/Motiva_o_e_voli_o2_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Motiva_o_e_voli_o2_Psicologia__c</fullName>
    <label>Motivação e volição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preservada</fullName>
            </value>
            <value>
                <fullName>Rebaixada</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>