force-app/main/default/objects/Avaliacao__c/fields/Motricidade_orofacial_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>Motricidade_orofacial_Fonoaudiologia__c</fullName>
    <label>Motricidade orofacial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dispraxia bucofacial</fullName>
            </value>
            <value>
                <fullName>Paralisia facial central</fullName>
            </value>
            <value>
                <fullName>Paralisia facial periférica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>