force-app/main/default/objects/Avaliacao__c/fields/Mucosa_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Mucosa_Fisioterapia__c</fullName>
    <label>Mucosa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corada</fullName>
            </value>
            <value>
                <fullName>Descorada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>