force-app/main/default/objects/Avaliacao__c/fields/N_de_Aspiracoes_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>N_de_Aspiracoes_Fisioterapia__c</fullName>
    <label>Nº de Aspirações</label>
    <length>255</length>
    <type>Text</type>
</CustomField>