force-app/main/default/objects/Avaliacao__c/fields/N_Sonda_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>N_Sonda_Fisioterapia__c</fullName>
    <label>Nº Sonda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>