force-app/main/default/objects/Avaliacao__c/fields/N_vel_de_aten_o_Fonoaudiologia__c.field-meta.xml
<CustomField>
    <fullName>N_vel_de_aten_o_Fonoaudiologia__c</fullName>
    <label>Nível de atenção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alerta</fullName>
            </value>
            <value>
                <fullName>Comatoso</fullName>
            </value>
            <value>
                <fullName>Confuso</fullName>
            </value>
            <value>
                <fullName>Sonolento</fullName>
            </value>
            <value>
                <fullName>Cooperativo</fullName>
            </value>
            <value>
                <fullName>Orientado</fullName>
            </value>
            <value>
                <fullName>Consciente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>