force-app/main/default/objects/Avaliacao__c/fields/Necessidade_de_aspiracap_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Necessidade_de_aspiracap_Fisioterapia__c</fullName>
    <label>Necessidade de aspiração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>