force-app/main/default/objects/Avaliacao__c/fields/Neurologia__c.field-meta.xml
<CustomField>
    <fullName>Neurologia__c</fullName>
    <label>Neurologia</label>
    <type>TextArea</type>
</CustomField>