force-app/main/default/objects/Avaliacao__c/fields/Nivel_de_Consciencia_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Consciencia_Fisioterapia__c</fullName>
    <label>Nível de Consciência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consciente</fullName>
            </value>
            <value>
                <fullName>Sonolento</fullName>
            </value>
            <value>
                <fullName>Torporoso</fullName>
            </value>
            <value>
                <fullName>Comatoso</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>