force-app/main/default/objects/Avaliacao__c/fields/Nome_do_Paciente__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Paciente__c</fullName>
    <formula>Prontuario__r.Paciente__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Paciente</label>
    <type>Text</type>
</CustomField>