force-app/main/default/objects/Avaliacao__c/fields/O2_fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>O2_fisioterapia__c</fullName>
    <label>O2 (L/min)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>