force-app/main/default/objects/Avaliacao__c/fields/Observa_es_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Observa_es_Fisioterapia__c</fullName>
    <label>Observações</label>
    <type>TextArea</type>
</CustomField>