force-app/main/default/objects/Avaliacao__c/fields/Observacoes_Medica__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_Medica__c</fullName>
    <label>Observações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>