force-app/main/default/objects/Avaliacao__c/fields/Ordem_de_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_Atendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordem de Atendimento</label>
    <referenceTo>Ordem_de_Atendimento__c</referenceTo>
    <relationshipLabel>Avaliações</relationshipLabel>
    <relationshipName>Avaliacoes</relationshipName>
    <type>Lookup</type>
</CustomField>