force-app/main/default/objects/Avaliacao__c/fields/Ordem_de_AtendimentoExt__c.field-meta.xml
<CustomField>
    <fullName>Ordem_de_AtendimentoExt__c</fullName>
    <label>Ordem de Atendimento —</label>
    <length>255</length>
    <type>Text</type>
</CustomField>