force-app/main/default/objects/Avaliacao__c/fields/Orienta_o_Alops_quica_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Orienta_o_Alops_quica_Psicologia__c</fullName>
    <label>Orientação Alopsíquica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preservada</fullName>
            </value>
            <value>
                <fullName>Alterada</fullName>
            </value>
            <value>
                <fullName>Não se aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>