force-app/main/default/objects/Avaliacao__c/fields/Outras_comorbidades_medica__c.field-meta.xml
<CustomField>
    <fullName>Outras_comorbidades_medica__c</fullName>
    <label>Outras comorbidades</label>
    <type>TextArea</type>
</CustomField>