force-app/main/default/objects/Avaliacao__c/fields/Outro_apetite_Psicologia__c.field-meta.xml
<CustomField>
    <fullName>Outro_apetite_Psicologia__c</fullName>
    <label>Outro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>