force-app/main/default/objects/Avaliacao__c/fields/Outros__c.field-meta.xml
<CustomField>
    <fullName>Outros__c</fullName>
    <label>Outros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>