force-app/main/default/objects/Avaliacao__c/fields/Padrao_Ventilatorio_Fisioterapia__c.field-meta.xml
<CustomField>
    <fullName>Padrao_Ventilatorio_Fisioterapia__c</fullName>
    <label>Padrão Ventilatório</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eupneico</fullName>
            </value>
            <value>
                <fullName>Dispneico</fullName>
            </value>
            <value>
                <fullName>Taquipneico</fullName>
            </value>
            <value>
                <fullName>Bradipneico</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>